@@ -25,4 +25,8 @@
 -Fix the win32 stuff in Lib/Util/UtilInterface.cpp
 -rewrite win32 event loop to use a SDL event loop. Don't forget to pump mouse
  events to MouseInterface then.
-
+-The brightness adjustment code generates 256 version of all palettes again at
+ the beginning, leading to excessive calculations on the CPU ~9 seconds from 11
+ seconds startup time are spend calculating these palettes. We should change
+ behaviour here I assume. (Restrict 5 or 10 values, people can tune their
+ monitor too and don't need to tune ingame!)
